manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: vaadin-demo-bakery-app
  name: vaadin-demo-bakery-app
  namespace: dummy
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: vaadin-demo-bakery-app
